// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gauge component Value- 0 - flipped colors 1`] = `
<div
  className="ins-m-negative ins-c-gauge ins-m-fill-level-4"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 0 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-4"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 25 - flipped colors 1`] = `
<div
  className="ins-m-negative ins-c-gauge ins-m-fill-level-3"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 25 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-3"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 50 - flipped colors 1`] = `
<div
  className="ins-m-negative ins-c-gauge ins-m-fill-level-2"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 50 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-2"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 75 - flipped colors 1`] = `
<div
  className="ins-m-negative ins-c-gauge ins-m-fill-level-1"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 75 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-1"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 100 - flipped colors 1`] = `
<div
  className="ins-m-negative ins-c-gauge ins-m-fill-level-1"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component Value- 100 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-1"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component should render correctly 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-4"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component should render correctly with added classes 1`] = `
<div
  className="addedClass ins-c-gauge ins-m-fill-level-4"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component should render correctly with identifier 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-4"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;

exports[`Gauge component should render correctly with width and height of 300 1`] = `
<div
  className="ins-c-gauge ins-m-fill-level-4"
  id="gauge-identifier"
  widget-id="gauge-identifier"
  widget-type="InsightsGauge"
/>
`;
